--- a/app/src/main/res/layout/item_rv_parking_list.xml
+++ b/app/src/main/res/layout/item_rv_parking_list.xml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:onClick="onItemClick"
-    android:background="@color/shallow_green"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+                android:background="@color/white"
+                android:onClick="onItemClick"
+    >
 
-
-    <TextView
-        android:id="@+id/tv_parking_title"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="24dp"
-        android:text="北京邮电大学停车场"
-        android:textSize="18sp"
-        android:layout_centerVertical="true"/>
+        android:orientation="vertical"
+        android:layout_marginStart="20dp"
+        android:layout_centerVertical="true">
 
+        <TextView
+            android:id="@+id/tv_parking_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="17:00"
+            android:textSize="16sp"
+            android:textColor="@color/major_text"
+            />
+
+        <TextView
+            android:id="@+id/tv_parking_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="开始时间"
+            android:textSize="12sp"
+            android:textColor="@color/minor_text"
+            android:layout_marginTop="10dp"
+            />
+
+    </LinearLayout>
 
     <ImageView
-        android:id="@+id/iv_parking_arrow"
-        android:layout_width="8dp"
-        android:layout_height="15dp"
-        android:background="@drawable/ic_arraw_right_gary"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
-         />
-
-    <TextView
-        android:id="@+id/tv_parking_content"
+        android:id="@+id/iv_right_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="￥10.00/小时"
-        android:textSize="18sp"
+        android:background="@drawable/img_right_arrow"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/iv_parking_arrow"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
         />
+
 </RelativeLayout>
