--- a/app/src/main/res/menu/menu_parking_list.xml
+++ b/app/src/main/res/menu/menu_parking_list.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_detail_parking_list"
         android:title="search lock's bluetooth"
-        android:icon="@drawable/ic_parking_detail"
+        android:icon="@drawable/img_time_axis"
         app:showAsAction="always"
         />
 
