--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/bg_theme_gradient" />
-    <item>
-        <bitmap
-            android:src="@mipmap/ic_launcher_logo"
-            android:gravity="center"
-            />
-    </item>
+    <item android:drawable="@drawable/img_splash" />
 </layer-list>
