--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,130 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
-    android:background="@drawable/bg_theme_gradient">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_phone"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="55dp"
-        android:text="@string/login_mobile"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="250dp"
-        android:layout_marginStart="83dp" />
+        android:theme="@style/toolbar_theme">
 
-    <TextView
-        android:id="@+id/tv_vertify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_verification"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_phone"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />
+        <include
+            layout="@layout/layout_toolbar_centertitle"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            />
 
-    <Button
-        android:id="@+id/bt_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:textSize="18sp"
-        android:textColor="#000"
-        android:paddingLeft="64dp"
-        android:paddingRight="64dp"
-        android:layout_marginRight="8dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        android:layout_marginTop="75dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_vertify"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        />
-    <!--android:onClick="login"-->
+    </android.support.design.widget.AppBarLayout>
 
-    <EditText
-        android:id="@+id/et_phone"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:textCursorDrawable="@null"
-        android:inputType="phone"
-        android:backgroundTint="@color/white"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_phone"
-        app:layout_constraintLeft_toRightOf="@+id/tv_phone"
-        android:layout_marginStart="33dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:orientation="vertical"
+        android:background="@color/bg_activity">
 
-    <EditText
-        android:id="@+id/et_vertify"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:textCursorDrawable="@null"
-        android:inputType="numberDecimal"
-        android:backgroundTint="@color/white"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_vertify"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/et_phone"
-        app:layout_constraintRight_toRightOf="@+id/et_phone"
-        android:layout_marginEnd="8dp" />
+        <LinearLayout
+            android:id="@+id/ll_phone"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:background="@color/white">
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:background="#c7c2c2"
-        app:layout_constraintTop_toBottomOf="@+id/et_phone"
-        app:layout_constraintBottom_toTopOf="@+id/et_vertify"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/img_phone"
+                />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="0dp"
-        android:background="#c7c2c2"
-        app:layout_constraintTop_toBottomOf="@+id/et_vertify"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/bt_login"
-        app:layout_constraintVertical_bias="0.184"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        />
+            <EditText
+                android:id="@+id/et_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/major_text"
+                android:hint="请输入手机号"
+                android:textColorHint="@color/minor_text"
+                android:inputType="phone"
+                android:background="@null"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center_vertical"/>
 
-    <Button
-        android:id="@+id/bt_verify"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:text="@string/login_getVerification"
-        app:layout_constraintBaseline_toBaselineOf="@+id/et_vertify"
-        android:layout_marginStart="95dp"
-        app:layout_constraintLeft_toLeftOf="@+id/et_vertify" />
+        </LinearLayout>
 
-    <!--android:onClick="verify"-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/bg_activity"
+            />
 
-</android.support.constraint.ConstraintLayout>
+        <RelativeLayout
+            android:id="@+id/rl_verify_code"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/white">
+
+            <ImageView
+                android:id="@+id/iv_verify_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/img_vericode"
+                />
+
+            <EditText
+                android:id="@+id/et_verify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/major_text"
+                android:hint="请输入验证码"
+                android:textColorHint="@color/minor_text"
+                android:inputType="phone"
+                android:background="@null"
+                android:layout_toEndOf="@id/iv_verify_code"
+                android:layout_marginStart="10dp"
+                android:layout_centerVertical="true"/>
+
+            <Button
+                android:id="@+id/bt_verify"
+                android:layout_width="75dp"
+                android:layout_height="35dp"
+                android:text="获取验证码"
+                android:textSize="12sp"
+                android:textColor="@color/theme_start_color"
+                android:layout_marginEnd="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/bg_btn_verify"
+                />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_specification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:textSize="12sp"
+            android:textColor="@color/minor_text"
+            />
+        
+        <Button
+            android:id="@+id/bt_login"
+            android:layout_width="320dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/login"
+            android:textSize="16sp"
+            android:textColor="@color/submit_feedback"
+            android:background="@drawable/round_long_button_blue"
+            android:layout_gravity="center_horizontal"/>
+
+    </LinearLayout>
+
+</LinearLayout>
