--- a/app/src/main/res/layout/layout_toolbar_subtitle.xml
+++ b/app/src/main/res/layout/layout_toolbar_subtitle.xml
@@ -29,8 +29,7 @@
             android:layout_gravity="center_horizontal"
             android:textSize="16sp"
             android:textColor="@color/white"
-            tools:text="title"
-            android:layout_marginBottom="10dp"/>
+            tools:text="title"/>
 
         <TextView
             android:id="@+id/tv_subtitle_toolbar"
@@ -39,11 +38,19 @@
             android:layout_gravity="center_horizontal"
             tools:text="subtitle"
             android:textSize="12sp"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"/>
 
     </LinearLayout>
 
-
-
+    <ImageView
+        android:id="@+id/iv_time_axis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_time_axis"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        />
 
 </RelativeLayout>
