--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash</item>
+        <!--<item name="android:windowFullscreen">true</item>-->
     </style>
 
     <style name="progress_bar_style" parent="android:Widget.ProgressBar.Horizontal">
