--- a/app/src/main/res/layout/item_reserve_list.xml
+++ b/app/src/main/res/layout/item_reserve_list.xml
@@ -9,8 +9,8 @@
         android:id="@+id/tv_reserve_estate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="BUPT"
-        android:textSize="18sp"
+        tools:text="北京邮电大学科研楼停车场"
+        android:textSize="16sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_margin="16dp"
