--- a/app/src/main/res/layout/activity_reserve_old.xml
+++ b/app/src/main/res/layout/activity_reserve_old.xml
@@ -38,14 +38,14 @@
             android:layout_height="match_parent"
             android:background="@color/white">
 
-            <ViewStub
-                android:id="@+id/viewstub_reserve_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inflatedId="@+id/iv_VsContent"
-                android:layout="@layout/layout_reserve_nonetwork">
+            <!--<ViewStub-->
+                <!--android:id="@+id/viewstub_reserve_list"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:inflatedId="@+id/iv_VsContent"-->
+                <!--android:layout="@layout/layout_reserve_nonetwork">-->
 
-            </ViewStub>
+            <!--</ViewStub>-->
 
             <com.ericliu.asyncexpandablelist.async.AsyncExpandableListView
                 android:id="@+id/lv_reserve_list"
