--- a/app/src/main/res/layout/dialog_delete_item.xml
+++ b/app/src/main/res/layout/dialog_delete_item.xml
@@ -5,12 +5,15 @@
     android:background="@drawable/bg_dialog_delete_item">
 
     <TextView
+        android:id="@+id/tv_delete_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="66.5dp"
         android:layout_gravity="center_horizontal"
         android:text="确定要删除发布吗 ?"
         android:textSize="16sp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
         android:textColor="@color/major_text"
         />
 
