--- a/app/src/main/res/layout/activity_parking_list.xml
+++ b/app/src/main/res/layout/activity_parking_list.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qhiehome.ihome.activity.ParkingListActivity"
-    android:orientation="vertical">
+    tools:context="com.qhiehome.ihome.activity.ParkingListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -106,10 +105,10 @@
             <View
                 android:id="@+id/view_separator"
                 android:layout_width="1dp"
-                android:layout_height="18dp"
+                android:layout_height="20dp"
                 android:layout_toEndOf="@id/tv_label_parking_fee"
                 android:layout_marginStart="5dp"
-                android:layout_alignBottom="@id/tv_label_parking_fee"
+                android:layout_centerVertical="true"
                 android:background="@color/minor_text"
                 />
 
@@ -151,4 +150,4 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
