fix(ReserveActivity): stop the countdownTimer when it's invisible

--- a/app/src/main/res/layout/item_rv_publish_parking.xml
+++ b/app/src/main/res/layout/item_rv_publish_parking.xml
@@ -60,6 +60,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="20dp"
             android:clickable="false"
+            android:visibility="gone"
             />
 
     </RelativeLayout>
