--- a/app/src/main/res/layout/activity_pay_result.xml
+++ b/app/src/main/res/layout/activity_pay_result.xml
@@ -33,10 +33,10 @@
             android:gravity="center_horizontal">
 
             <ImageView
+                android:id="@+id/iv_pay_result"
                 android:contentDescription="ic_pay_bao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_pay_bao"
                 android:layout_marginTop="30dp"/>
 
             <TextView
