--- a/app/src/main/res/layout/layout_reserve_nonetwork.xml
+++ b/app/src/main/res/layout/layout_reserve_nonetwork.xml
@@ -37,6 +37,7 @@
             android:text="确认离开"
             android:textSize="16sp"
             android:textColor="@color/submit_feedback"
+            android:clickable="true"
             android:layout_below="@+id/tv_reserve_nonetwork"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp" />
