fix(app): update encrypted algo

--- a/app/src/main/res/layout/activity_reserve.xml
+++ b/app/src/main/res/layout/activity_reserve.xml
@@ -25,7 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:visibility="gone"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -46,6 +45,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
+
+            <LinearLayout
+                android:id="@+id/ll_reserve_empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:contentDescription="default reserve image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/img_empty_order"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_reserve_empty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="您还没预约车位哟 !"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray"
+                    android:layout_marginTop="16dp"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+            </LinearLayout>
 
         </RelativeLayout>
 
