--- a/app/src/main/res/layout/item_rv_lock.xml
+++ b/app/src/main/res/layout/item_rv_lock.xml
@@ -74,8 +74,8 @@
 
 
     <Button
-        android:id="@+id/bt_modify_pwd"
-        android:text="修改密码"
+        android:id="@+id/bt_connect"
+        android:text="@string/device_connect"
         android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
