feat(ReserveActivity): add lock control in reserve process

--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -11,7 +11,7 @@
     <string-array name="setting_menu">
         <item>检查更新</item>
         <item>意见反馈</item>
-        <item>服务条款</item>
+        <item>服务协议</item>
         <item>关于应用</item>
     </string-array>
 
