--- a/app/src/main/res/layout/item_rv_order_owner.xml
+++ b/app/src/main/res/layout/item_rv_order_owner.xml
@@ -1,70 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="117dp"
+    android:layout_marginTop="10dp"
+    android:background="@color/white"
+    >
 
-    <TextView
-        android:id="@+id/tv_item_order_owner_parking"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:gravity="center_vertical|left"
-        android:maxLines="1"
-        android:paddingStart="8dp"
-        android:paddingTop="8dp"
-        android:text="北京邮电大学停车场-3号停车位"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_centerVertical="true">
 
-    <TextView
-        android:id="@+id/tv_item_order_owner_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_item_order_owner_parking"
-        android:layout_alignStart="@id/tv_item_order_owner_parking"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:gravity="center_vertical|left"
-        android:maxLines="1"
-        android:paddingStart="8dp"
-        android:paddingTop="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        tools:text="订单:29101923" />
+        <RelativeLayout
+            android:id="@+id/layout_title_order_owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp">
 
-    <TextView
-        android:id="@+id/tv_item_order_owner_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:gravity="center_vertical|left"
-        android:maxLines="1"
-        android:paddingStart="8dp"
-        android:paddingTop="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        tools:text="2017.4.5 16:30 - 17:32"
-        android:layout_below="@id/tv_item_order_owner_id"
-        android:layout_alignStart="@id/tv_item_order_owner_id" />
+            <TextView
+                android:id="@+id/tv_item_order_owner_parking"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="北京邮电大学停车场-3号停车位"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                />
 
-    <TextView
-        android:id="@+id/tv_item_order_owner_fee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_item_order_owner_time"
-        tools:text="已支付：23.45元"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:layout_alignStart="@id/tv_item_order_owner_time"
-        android:padding="8dp"
-        />
+            <TextView
+                android:id="@+id/tv_item_order_owner_state"
+                android:layout_width="60dp"
+                android:layout_height="16dp"
+                android:background="@drawable/gray_rect_reserve"
+                android:text="超时未停车"
+                android:textSize="9sp"
+                android:textColor="@color/white"
+                android:layout_toEndOf="@id/tv_item_order_owner_parking"
+                android:layout_marginStart="5dp"
+                android:gravity="center"
+                android:layout_centerVertical="true"
+                />
 
+        </RelativeLayout>
 
+        <TextView
+            android:id="@+id/tv_item_order_owner_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_title_order_owner"
+            android:layout_alignStart="@id/layout_title_order_owner"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/minor_text"
+            android:textSize="12sp"
+            tools:text="2017-08-18 22:30 - 23:00"
+            />
 
+        <TextView
+            android:id="@+id/tv_item_order_owner_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/minor_text"
+            android:textSize="12sp"
+            tools:text="订单号：18"
+            android:layout_below="@id/tv_item_order_owner_time"
+            android:layout_alignStart="@id/tv_item_order_owner_time"
+            android:layout_marginTop="10dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_item_order_owner_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_item_order_owner_id"
+            tools:text="收取费用：¥23.45"
+            android:textSize="12sp"
+            android:textColor="@color/minor_text"
+            android:layout_alignStart="@id/tv_item_order_owner_id"
+            android:layout_marginTop="10dp"
+            />
+
+    </RelativeLayout>
 
 </RelativeLayout>
