--- a/app/src/main/res/drawable/blue_rect_my_parking.xml
+++ b/app/src/main/res/drawable/blue_rect_my_parking.xml
@@ -3,7 +3,10 @@
     android:shape="rectangle">
 
     <solid android:color="@color/white" />
+
     <corners android:radius="2dp"/>
-    <stroke android:width="1dip" android:color="@color/theme_start_color"/>
+
+    <stroke android:width="1dp"
+            android:color="@color/theme_start_color"/>
 
 </shape>
