--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -27,4 +27,25 @@
         <item>8888-8888</item>
     </string-array>
 
+    <string-array name="cities">
+        <item>北京市</item>
+        <item>广州市</item>
+        <item>深圳市</item>
+        <item>上海市</item>
+        <item>杭州市</item>
+        <item>成都市</item>
+    </string-array>
+
+    <string-array name="avatar_items">
+        <item>拍照</item>
+        <item>相册</item>
+    </string-array>
+
+    <string-array name="add_balance">
+        <item>10.00</item>
+        <item>30.00</item>
+        <item>50.00</item>
+        <item>100.00</item>
+    </string-array>
+
 </resources>
