--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <string-array name="about_menu_title">
+        <item>Wechat Official Account</item>
+        <item>Official Website</item>
+        <item>Hotline</item>
+    </string-array>
+
+    <string-array name="about_menu_info">
+        <item>iHome</item>
+        <item>www.qhiehome.com</item>
+        <item>8888-8888</item>
+    </string-array>
+
+    <string-array name="cities">
+        <item>Beijing</item>
+        <item>Guangzhou</item>
+        <item>Shenzhen</item>
+        <item>Shanghai</item>
+        <item>Hangzhou</item>
+        <item>Chengdu</item>
+    </string-array>
+
     <string-array name="titles">
         <item>Account</item>
         <item>My Reservation</item>
@@ -15,18 +37,11 @@
         <item>About</item>
     </string-array>
 
-    <string-array name="cities">
-        <item>北京市</item>
-        <item>广州市</item>
-        <item>深圳市</item>
-        <item>上海市</item>
-        <item>杭州市</item>
-        <item>成都市</item>
-    </string-array>
+
 
     <string-array name="avatar_items">
-        <item>拍照</item>
-        <item>相册</item>
+        <item>Take Photo</item>
+        <item>Gallery</item>
     </string-array>
 
     <string-array name="add_balance">
